...
          tabBarIcon: ({ focused }) => <TabIcon icon={Gift} label="Cadeau" focused={focused} />,
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
          tabBarIcon: ({ focused }) => <TabIcon icon={User} label="Profil" focused={focused} />,
        }}
      />
    </Tabs>
  )
}

